<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gtest_vendor</name>
  <version>1.8.0</version>
  <description>The package provides GoogleTest.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <license>BSD</license>

  <build_depend>cmake</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
